# copado-hx

./: .copado-hx.json.example  .gitignore  ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  HANDOVER.md  INNOVATION.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  ROADMAP.md  SKILL.md  pyproject.toml  test_query.py
copado_hx/: __init__.py  main.py
copado_hx/api/: ai_platform.py  base.py  cicd.py  crt.py  mock_data.py
copado_hx/auth/: sf_oauth.py  store.py
copado_hx/commands/: ai.py  auth.py  env.py  pipeline.py  story.py  test.py  workflow.py
copado_hx/utils/: config.py  output.py  polling.py  state.py  suggestions.py
demo/: demo_script.md
